--- a/10-Ingress-Context-Path-Based-Routing/kube-manifests/04-IngressService-Manifests/01-Ingress-Context-Path-Based-Routing.yml
+++ b/10-Ingress-Context-Path-Based-Routing/kube-manifests/04-IngressService-Manifests/01-Ingress-Context-Path-Based-Routing.yml
@@ -1,15 +1,14 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress-cpr
-  annotations:
-    kubernetes.io/ingress.class: nginx  
+  name: ingress-cpr 
 spec:
   defaultBackend:
     service:
       name: usermgmt-webapp-clusterip-service
       port:
         number: 80
+  ingressClassName: nginx
   rules:
     - http:
         paths:
@@ -27,13 +26,13 @@ spec:
                 name: app2-nginx-clusterip-service
                 port: 
                   number: 80  
-#          - path: /
-#            pathType: Prefix
-#            backend:
-#              service:
-#                name: usermgmt-webapp-clusterip-service
-#                port: 
-#                  number: 80                  
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: usermgmt-webapp-clusterip-service
+                port: 
+                  number: 80                  
                                                  
                   
       
